Move legislation and policy to separate page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
-  <!-- See quick intro to GitHub pages at https://pages.github.com/ -->
-  <!-- See also https://help.github.com/articles/user-organization-and-project-pages/ -->
+  <!--See quick intro to GitHub pages at https://pages.github.com/ -->
+  <!--See also https://help.github.com/articles/user-organization-and-project-pages/ -->
   <link rel="license" href="LICENCE.html" /><!-- license rel, see https://www.w3.org/TR/html5/links.html#sec-link-types -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
@@ -27,50 +27,37 @@
   <section>
     <h2>Web</h2>
     <ul>
-      <li><a href="WebAppAccessibilityResources.html">Web Application Accessibility Resources</a>.
-      </li>
-      <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a>.
-      </li>
-      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a>.
-      </li>
-      <li><a href="elearning.html">Accessibility in e-Learning</a>.
-      </li>
-      <li><a href="contentmanagement.html">Content Management Systems (<abbr>CMS</abbr>)</a>.
-      </li>
+      <li><a href="WebAppAccessibilityResources.html">Web Application Accessibility Resources</a></li>
+      <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
+      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
+      <li><a href="elearning.html">Accessibility in e-Learning</a></li>
+      <li><a href="contentmanagement.html">Content Management Systems (<abbr>CMS</abbr>)</a></li>
     </ul>
   </section>
 
   <section>
     <h2>Mobile</h2>
     <ul>
-      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility Resources</a>.
-      </li>
+      <li><a href="MobileAccessibilityResources.html">Mobile Accessibility Resources</a></li>
     </ul>
   </section>
 
   <section>
     <h2>Desktop</h2>
     <ul>
-      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility Resources</a>.
-      </li>
-      <li><a href="GUIAccessibilityResources.html">
-        <abbr title="graphical user interface">GUI</abbr> Toolkit Accessibility Resources</a>.
-      </li>
+      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility Resources</a></li>
+      <li><a href="GUIAccessibilityResources.html"><abbr title="graphical user interface">GUI</abbr> Toolkit Accessibility Resources</a></li>
     </ul>
   </section>
 
   <section>
     <h2>Implementing Accessibility or Design for All</h2>
     <ul>
-      <li><a href="courses.html">(Online) Courses on Accessibility or Disability</a>
-      </li>
+      <li><a href="courses.html">(Online) Courses on Accessibility or Disability</a></li>
       <li><a href="designforall.html">Design for All</a></li>
-      <li><a href="personas.html">Personas</a>.
-      </li>
-      <li><a href="accessibilityguidelines.html">Accessibility Guidelines and Standards</a>.
-      </li>
-      <li><a href="oers/moocap-oers.html">Open educational resources (<abbr>OERs</abbr>) for accessibility courses (<abbr>MOOCAP</abbr>)</a>
-      </li>
+      <li><a href="personas.html">Personas</a></li>
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines and Standards</a></li>
+      <li><a href="oers/moocap-oers.html">Open educational resources (<abbr>OERs</abbr>) for accessibility courses (<abbr>MOOCAP</abbr>)</a></li>
     </ul>
   </section>
 
@@ -78,36 +65,26 @@
     <h2>Personalisation</h2>
     <p>General Public Inclusive Infrastucture (<abbr>GPII</abbr>):</p>
     <ul>
-      <li>
-        <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a>.
-      </li>
-      <li>
-        <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
-      </li>
+      <li><a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a></li>
+      <li><a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a></li>
     </ul>
   </section>
 
   <section>
     <h2>Other Topics</h2>
     <ul>
-      <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a>.
-      </li>
-      <li>
-        <a href="crowdsourcing.html">Accessibility, Crowdsourcing and Human-Based Computation</a>.
-      </li>
+      <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a></li>
+      <li><a href="crowdsourcing.html">Accessibility, Crowdsourcing and Human-Based Computation</a></li>
       <li>
         <a href="assistivetechnology.html">Assistive Technology</a>,
         especially toolkits and platforms for developing 
-        <abbr class="assistive technology">AT</abbr>.
+        <abbr class="assistive technology">AT</abbr>
       </li>
-      <li><a href="contentaccessibility.html">Content Accessibility</a>.
-      </li>
-      <li><a href="tts.html">Text-to-speech software</a>.
-      </li>
-      <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a>
-      </li>
-      <li><a href="terminology.html">Terminology</a>
-      </li>
+      <li><a href="contentaccessibility.html">Content Accessibility</a></li>
+      <li><a href="tts.html">Text-to-speech software</a></li>
+      <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="terminology.html">Terminology</a></li>
+      <li><a href="social-legal.html">Social and Legal Aspects</a></li>
     </ul>
   </section>
 
