Add: Siteimprove: What Is The European Web Accessibility directive?

--- a/social-legal.html
+++ b/social-legal.html
@@ -40,8 +40,8 @@
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
       <li><a href="terminology.html">Terminology</a></li>
-      <li><a href="social-legal.html">Social and Legal Aspects</a></li>
-      <li class="active"><a aria-current="page" href="miscellaneous-links.html">Miscellaneous Links</a></li>
+      <li class="active"><a aria-current="page" href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
 
@@ -96,13 +96,17 @@
         <a href="https://wadcher.eu/"><abbr>WAD</abbr>cher: Web Accessibility Directive Decision Support Environment</a>:
         website of a <abbr>EU</abbr>-funded project (January 2018 – December 2020).
       </li>
-      <li><span lang="de">Fischer, Detlev:
+      <li><span lang="de">Fischer, Detlev</span>:
         <a href="https://team-usability.de/en/teamu-blog-post/simplified-monitoring.html" hreflang="de">What could "simplified monitoring" of the implementation of the Web Accessibility Directive mean?</a>,
         <i class="website">Team Usability</i>, 15.08.2019.
       </li>
       <li>Page, Ted:
         <a href="https://accessible-digital-documents.com/blog/the-eu-accessibility-directive-and-pdf/">The <abbr>EU</abbr> Accessibility Directive becomes <abbr>UK</abbr> law</a>,
         <i class="blog"><abbr title="Accessible Digital Documents">ADD</abbr> blog</i>, 23.09.2018.
+      </li>
+      <li>
+        <a href="https://siteimprove.com/en/accessibility/eu-web-accessibility-directive/">What Is The European Web Accessibility directive?</a>,
+        <i class="website">Siteimprove</i>, 08.03.2020.
       </li>
     </ul>
 
@@ -208,7 +212,7 @@
       </li>
       <li><span lang="de">Hellbusch, Jan:
         <a href="https://www.hellbusch.de/update-fuer-bitv-2-0/">Update für <abbr>BITV</abbr> 2.0 </a>,
-        <i class="blog">hellbusch.de</i>, 01.07.2019.
+        <i class="blog">hellbusch.de</i>,</span> 01.07.2019.
       </li>
       <li>
         <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:02004L0018-20160101">DIRECTIVE 2004/18/<abbr>EC</abbr> OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL of 31 March 2004 on the coordination of procedures for the award of public works contracts, public supply contracts and public service contracts</a>,
