Add: www.untertitelrichtlinien.de

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -114,7 +114,7 @@
       </li>
       <li>Microsoft:
         <a href="https://support.office.com/en-us/article/Accessibility-support-for-Visio-7ac46c50-02c2-44ab-aa1c-711482099276">Accessibility support for Visio</a>:
-        covers Visio 2016.
+        this document covers Visio Professional 2016 and more recent versions.
       </li>
       <li>Microsoft:
         <a href="https://support.office.com/en-us/article/use-the-accessibility-checker-on-your-windows-desktop-to-find-accessibility-issues-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">Use the Accessibility Checker on your Windows desktop to find accessibility issues</a>
@@ -138,7 +138,7 @@
       </li>
       <li>
         <a href="https://www.lexdis.org.uk/guides/making-microsoft-word-documents-accessible/">Making Word Processing Documents Accessible</a>,
-        <i class="website">Lexdis</i> (no date).
+        <i class="website">Lexdis</i>, 11.04.201 (updated on 04.03.2020).
       </li>
       <li><a href="https://www.zweiterblick.at/index.php?site=word" hreflang="de">Microsoft Office Word</a>,
         <i class="website" lang="de">Zweiter Blick</i> (no date).
@@ -364,10 +364,14 @@
     <ul>
       <li><abbr>BBC</abbr>:
         <a href="https://www.bbc.com/academy-guides/how-do-i-create-subtitles">How do I create subtitles?</a>,
-        <i class="website">Academy Guides (<abbr>BBC</abbr>)</i>, no date.
+        <i class="website">Academy Guides (<abbr>BBC</abbr>)</i>, no date (presumably 2019).
       </li>
       <li><abbr>BBC</abbr>:
         <a href="https://bbc.github.io/subtitle-guidelines/"><abbr>BBC</abbr> Subtitle Guidelines</a>.
+      </li>
+      <li>
+        <a href="http://www.untertitelrichtlinien.de/" hreflang="de" lang="de">Gemeinsame Untertitelrichtlinien für den deutschen Sprachraum</a>:
+        guidelines defined by several associations that represent people with hearing impairments.
       </li>
     </ul>
 
