--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -372,6 +372,12 @@
       <li>
         <a href="http://www.untertitelrichtlinien.de/" hreflang="de" lang="de">Gemeinsame Untertitelrichtlinien für den deutschen Sprachraum</a>:
         guidelines defined by several associations that represent people with hearing impairments.
+        These guidelines cover aspects such as line length, timing and transcribing non-speech sounds
+      </li>
+      <li><span lang="fr">Vasseur, Cédric:
+        <a href="http://handisol.beepmaster.com/creer-sous-titrage.php" hreflang="fr">Sous-titrer une vidéo</a>,
+        <i class="website">handisol.beepmaster.com</i>, 27.09.2010, updated several times.
+        This document covers both technical steps and, to a lesser extent, subtitle formatting and content.
       </li>
     </ul>
 
