Update id attributes on headings for captioning

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -60,7 +60,7 @@
         Microsoft Excel, OpenOffice Calc, Microsoft PowerPoint, OpenOffice Impress
         and several other applications.
       </li>
-      <!-- 
+      <!--
         * "Hpw I use Libreoffice for adaptive typing" (by crippledcritic / Robert Kingett, who has cerebral palsy): https://www.youtube.com/watch?v=wXEavIjNovQ 
         * PhraseExpress (Text expander for Windows: http://www.phraseexpress.com/ 
           ** Freeware - 30-day trial: http://www.phraseexpress.com/freeware.htm 
@@ -309,7 +309,7 @@
       </li>
       <!--https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/ -->
     </ul>
-    <!-- https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
+    <!--https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
 
     <p>Support for tagged <abbr>PDF</abbr> on Mac <abbr>OS</abbr> has long been poor:</p>
     <ul>
@@ -360,7 +360,7 @@
     </ul>
 
     <h2 id="audio-video">Audio and Video</h2>
-    <h3>Captioning Guidelines</h3>
+    <h3 id="captioning-guidelines">Captioning Guidelines</h3>
     <ul>
       <li><abbr>BBC</abbr>:
         <a href="https://www.bbc.com/academy-guides/how-do-i-create-subtitles">How do I create subtitles?</a>,
@@ -381,7 +381,7 @@
       </li>
     </ul>
 
-    <h3 id="captioning">Captioning / Subtitles for the Hard of Hearing</h3>
+    <h3 id="captioning-tools">Tools for Captioning / Subtitles for the Hard of Hearing</h3>
     <p>Note that the <abbr>USA</abbr> and the <abbr>UK</abbr> use different terms:
       the American English term &ldquo;captions&rdquo; corresponds with the British English term
       &ldquo;subtitles&rdquo; or more accurately &ldquo;subtitles for the deaf and hard of hearing&rdquo;.
@@ -546,7 +546,7 @@
     </ul>
 
     <h3 id="audio-description">Audio Description</h3>
-    <!-- Audio description can also be helpful for autistic people: "autistic friends say it's helpful as they can't decode faces/body language." 
+    <!--Audio description can also be helpful for autistic people: "autistic friends say it's helpful as they can't decode faces/body language." 
         https://www.futurelearn.com/courses/digital-accessibility/1/comments/17624800
     -->
     <ul>
@@ -560,7 +560,7 @@
       <li>Rodas, Julia Miele:
         <a href="https://jitp.commons.gc.cuny.edu/youdescribe-testing-crowd-sourced-video-description-for-service-learning-at-the-city-university-of-new-york/">YouDescribe: Testing Crowd-sourced Video Description for Service Learning at the City University of New York</a>,
         <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
-        <!-- @@todo read! -->
+        <!--@@todo read! -->
       </li>
       <li>Amboy, Dayna:
         <a href="https://www.techsmith.com/blog/audio-descriptions-course-videos-accessible/">Why You Need Audio Descriptions to Make Online Course Videos Accessible</a>,
@@ -697,17 +697,17 @@
     <ul>
       <li>DuBay, William H.:
         <a href="http://files.eric.ed.gov/fulltext/ED490073.pdf">The Principles of Readability</a>, 2004.
-        <!-- downloaded -->
+        <!--@@downloaded -->
       </li>
       <li>Mikk, Jaan: 
         <a href="">Methods for determining optimal readability of texts</a>,
         <i class="journal">Journal of Quantitative Linguistics</i>, Volume 2, Issue 2 (1995).
-        <!-- http://www.tandfonline.com/doi/abs/10.1080/09296179508590041 (only short abstract) -->
+        <!--http://www.tandfonline.com/doi/abs/10.1080/09296179508590041 (only short abstract) -->
       </li>
       <li>Cannon, Barbara; Edmond, Grace: 
         <a href="http://leader.pubs.asha.org/article.aspx?articleid=2289630">A Few Good Words Using Core Vocabulary to Support Nonverbal Students</a>,
         <i class="magazine">The Asha Leader</i>, Vol. 14 (April 2009): 20-23.
-        <!-- @@check/read -->
+        <!--@@check/read -->
       </li>
       <li>Scott, Brian:
         <a href="http://www.readabilityformulas.com/search/pages/Readability_Formulas/">Readability Formulas</a>:
@@ -722,7 +722,7 @@
         <ul>
           <li>
             <a href="http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/dale.chall.html">Readability: Dale-Chall Readability Formula</a>;
-            <!-- koRpus - An R Package for Text Analysis: http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/00Index.html -->
+            <!--koRpus - An R Package for Text Analysis: http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/00Index.html -->
           </li>
           <li>
             <a href="https://cran.r-project.org/web/packages/koRpus/koRpus.pdf">Package ‘koRpus’ (documentation)</a>.
