Add: TVS Guidelines For Making Your Documents Braille-Ready

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -71,7 +71,6 @@
           ** Is this accessible??
         * GrackleDocs: Accessibility Add-On for Google Chrome: https://www.grackledocs.com/ 
         * https://support.office.com/en-us/article/Change-the-Normal-template-Normal-dotm-06de294b-d216-47f6-ab77-ccb5166f98ea (from https://www.futurelearn.com/courses/digital-accessibility/1/comments/17184690)
-        * Techno-Vision Systems Ltd. "The 10 TVS Guidelines For Making Your Documents Braille-Ready": http://www.techno-vision.co.uk/home-page/the-10-tvs-guidelines-for-making-your-documents-braille-ready/ 
         * Simpler language:
           ** http://www.simplificationcentre.org.uk/about-us/governance/ 
           ** http://www.plainenglish.co.uk/services/crystal-mark.html 
@@ -139,10 +138,16 @@
       <li>
         <a href="https://www.lexdis.org.uk/guides/making-microsoft-word-documents-accessible/">Making Word Processing Documents Accessible</a>,
         <i class="website">Lexdis</i>, 11.04.201 (updated on 04.03.2020).
+        <br />This is a list of tips that can be read in a few minutes. (The advice about saving as <abbr>RTF</abbr> is outdated.)
+        <!--Article written by E. A. Draffan? Website uses ATBar, 14.10.2020-->
       </li>
       <li><a href="https://www.zweiterblick.at/index.php?site=word" hreflang="de">Microsoft Office Word</a>,
         <i class="website" lang="de">Zweiter Blick</i> (no date).
-        <br />This article covers Microsoft Word versions 2010 &mdash; 2016.
+        <br />This article covers Microsoft Word versions 2010&ndash;2016.
+      </li>
+      <li>
+        <a href="https://www.techno-vision.co.uk/home-page/the-10-tvs-guidelines-for-making-your-documents-braille-ready/">The 10 <abbr title="Techno-Vision Systems">TVS</abbr> Guidelines For Making Your Documents Braille-Ready</a>,
+        <i class="website">Techno-Vision Systems <abbr>Ltd.</abbr></i> (no date).
       </li>
     </ul>
     <!--AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html -->
