Add: U Sheffield: Digital Accessibility in Learning and Teaching

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -550,6 +550,17 @@
 
     <h2>Accessibility in Education</h2>
     <ul>
+      <li>
+        <a href="https://www.sheffield.ac.uk/apse/digital/digital-accessibility">Digital Accessibility in Learning and Teaching</a>,
+        <i class="website">The University of Sheffield</i> (no date).
+        See also The University of Sheffield's
+        <a href="https://search.sheffield.ac.uk/s/redirect?collection=sheffield-uni-meta&url=https%3A%2F%2Fwww.sheffield.ac.uk%2Fpolopoly_fs%2F1.18989%21%2Ffile%2FThe-inclusive-learning-and-teaching-handbook.pdf&auth=VvADPnmBnAd5%2BIgOUVX%2Fwg&profile=_default&rank=1&query=inclusive+learning+and+teaching+handbook">The inclusive learning and teaching handbook (<abbr>PDF</abbr>)</a>
+        (created by Elena Rodriguez-Falcon, Marie Evans, Claire Allam, John Barrett, Dave Forrest and Chris Glynn in 2010).
+      </li>
+      <li>
+        <a href="https://www.sheffield.ac.uk/staff/elevate/essentials/inclusivity">Inclusivity: the essentials</a>,
+        <i class="website">The University of Sheffield</i> (no date).
+      </li>
       <li>Mendlesohn, Farah:
         <a href="https://www.timeshighereducation.com/blog/disability-campus-we-do-not-practise-best-practice-and-it-high-time-we-did">Disability on Campus: ‘We do not practise best practice, and it is high time that we did’</a>,
         <i class="magazine">Times Higher Education</i>, 17 May 2017.
