Add: Accessible-Coconut

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -299,7 +299,17 @@
       </li>
       <li><a href="https://tarch.org/">Tarch</a>
         describes itself as <q>the new talking arch live<abbr>cd</abbr> project</q>.
-        Its latest version is Tarch 2019.06.22, released in June 2019.
+        Its latest version is Tarch 2020.02.24, released in February 2020.
+      </li>
+      <li><a href="https://sourceforge.net/projects/accessible-coconut/">Accessible-Coconut</a>
+        is a Linux distribution based on Ubuntu-Mate that claims to be
+        <q>completely accessible for persons with visual impairment</q>.
+        <br />Accessible-Coconut provides <em>some</em> accessibility information in the form of a feature list
+        on SourceForge. The listed features include an <q>installation process is fully accessible to a visually challenged user</q>,
+        the console screenreader Fenrir, support for Braille input, <q>accessible Chrome and Firefox</q>,
+        a Daisy player, accessible audio and video editing solutions.
+        However, it does not say anything about the screenreader Orca, zoom functions, high-contrast themes
+        and features to make the cursor more visible.
       </li>
       <li><a href="https://talkingarch.tk/">TalkingArch</a>:
         <q>a respin of the Arch Linux live iso modified to include speech and braille output for blind and visually impaired users</q>.
