Add: Wald: How audio description within games could make them more accessible for blind and low vision players

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -303,6 +303,10 @@
         <a href="https://www.polygon.com/2020/1/8/21056713/disabilities-video-game-characters-inclusion-accessibility-decade-in-review">Video games and disability: Looking back at a challenging decade</a>,
         <i class="website">Polygon</i>, 08.01.2020.
       </li>
+      <li>Wald, Heather:
+        <a href="https://www.gamesradar.com/how-audio-description-within-games-could-make-them-more-accessible-for-blind-and-low-vision-players/">How audio description within games could make them more accessible for blind and low vision players</a>,
+        <i class="website">GamesRadar+</i>, 20.10.2020.
+      </li>
     </ul>
 
 
