Add: Hoogerwerf et al: The Role of Assistive Technology in Fostering Inclusive Education

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -265,6 +265,11 @@
         <a href="https://leidmedien.de/aktuelles/gadgets-blinde/" hreflang="de">Gadgets lassen Blinde nicht wieder sehen</a>,
         <i class="website">Leidmedien</i></span>, 21.11.2017.
       </li>
+      <li>Hoogerwerf, Evert-Jan; Mavrou, Katerina; Traina, Ivan (editors):
+        <i class="booktitle">The Role of Assistive Technology in Fostering Inclusive Education: Strategies and Tools to Support Change</i>.
+        Routledge Research in Special Educational Needs. Routledge, 2020. (166 pages)
+        <a href="https://www.routledge.com/The-Role-of-Assistive-Technology-in-Fostering-Inclusive-Education-Strategies/Hoogerwerf-Mavrou-Traina/p/book/9781138370081"><abbr>ISBN</abbr> 9781138370081</a>.
+      </li>
     </ul>
 
   </main>
