Add: CommonLook: Using Auto-Tagging To Achieve PDF Accessibility

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -220,6 +220,11 @@
         <i class="blog">Medium</i>, 17.06.2019.
         <!--@@check links at bottom of page-->
       </li>
+      <li>Ashish Tiwari:
+        <a href="https://commonlook.com/using-auto-tagging-achieve-pdf-accessibility-expectations-vs-reality-white-paper/">Using Auto-Tagging To Achieve <abbr>PDF</abbr> Accessibility: Expectations vs Reality (White Paper)</a>,
+        <i class="website">CommonLook</i>, 14.10.2020.
+        <!--@@download PDF-->
+      </li>
       <li>
         <a href="https://accessible-pdf.info/de/" hreflang="de" lang="de">Barrierefreies <abbr>PDF</abbr></a>.
         (Website by <span lang="de">Stefan Brechbühl</span> from Switzerland. Licence: Creative Commons Attribution 4.0 International.)
