Add: Methods to produce flexible and accessible learning resources in mathematics

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -885,6 +885,10 @@
         <a href="https://presseportal.zdf.de/wissenswert/mappe/zeige/Special/zdf-filme-sind-hoererlebnisse/" hreflang="de"><abbr>ZDF</abbr>-Filme sind Hörerlebnisse</a>,
         <i class="website"><abbr>ZDF</abbr> Presseportal</i>,</span> (no date, possibly 2019).
       </li>
+      <li>
+        <a href="https://people.bath.ac.uk/cspehj/maths-access/home.html">Methods to produce flexible and accessible learning resources in mathematics</a>,
+        <i class="website">Maths &amp; Stats Help Centre, University of Bath</i>, 2012 (Creative Commons licence).
+      </li>
     </ul>
 
   </main>
