add: SuperNova Magnifier Features

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -175,7 +175,8 @@
       </li>
       <li>
         <a href="https://yourdolphin.com/en-gb/products/individuals/families/supernova">Dolphin SuperNova</a>:
-        a screen reader and magnifier for Windows.
+        a screen reader and magnifier for Windows. See for example,
+        <a href="https://yourdolphin.com/product/features?pid=1">SuperNova Magnifier Features</a>.
       </li>
       <li>
         <a href="http://gwmicro.com/"><abbr>GW</abbr> Micro</a>
