add aria-placeholder (Faulkner, Watson)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -811,6 +811,20 @@
           <a href="https://www.levelaccess.com/how-to-provide-accessible-error-identification/">How to Provide Accessible Form Error Identification</a>,
           <i class="website">Level Access</i>, 04.08.2014.
         </li>
+        <li>Faulkner, Steve:
+          <a href="https://codepen.io/stevef/pen/wvWWpOX">aria-placeholder test</a>,
+          <i class="website">codepen.io</i>.
+          See <a href="https://twitter.com/stevefaulkner/status/1318134745826578434">Steve Faulkner's tweet from 19.10.2020</a>:
+          <q>aria-placeholder does not provide a fallback accessible name for either custom or native inputs</q>.
+        </li>
+        <li>Zehe, Marco:
+          <a href="https://www.marcozehe.de/easy-aria-tip-8-use-aria-roledescription-to-selectively-enhance-the-user-experience/">Easy <abbr>ARIA</abbr> tip #8: Use aria-roledescription to selectively enhance the user experience</a>,
+          <i class="blog">Marco Zehe</i>, 05.07.2018.
+        </li>
+        <li>Watson, Léonie:
+          <a href="https://tink.uk/using-the-aria-roledescription-attribute/">Using the aria-roledescription attribute</a>,
+          <i class="website">Tink</i>, 13.12.2018.
+        </li>
       </ul>
     </section>
 
