Add: Non-modal dialogs (Access & Use)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1171,6 +1171,10 @@
 
       <h3>Modal and Non-Modal Dialogs</h3>
       <ul>
+        <li>
+          <a href="https://accessuse.eu/en/non-modal-dialogs.html">Non-modal dialogs</a>,
+          <i class="website">Access &amp; Use</i>, last updated on 22.09.2020 (Creative Commons licence).
+        </li>
         <li lang="de">Hellbusch, Jan:
           <a href="http://webkrauts.de/artikel/2018/modale-und-barrierefreie-dialogfenster">Abgedunkelte Inhalte muss keiner lesen</a>,
           <i class="website">Webkrauts</i>, <abbr>Jan.</abbr> 2018.
