Add: ARIA Non-Modal Dialog Example (Athena)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1175,6 +1175,10 @@
           <a href="https://accessuse.eu/en/non-modal-dialogs.html">Non-modal dialogs</a>,
           <i class="website">Access &amp; Use</i>, last updated on 22.09.2020 (Creative Commons licence).
         </li>
+        <li>
+          <a href="http://accessibility.athena-ict.com/aria/examples/bubbledialog.shtml"><abbr>ARIA</abbr> Non-Modal Dialog Example</a>,
+          <i class="website">Athena Technologies</i> (no date).
+        </li>
         <li lang="de">Hellbusch, Jan:
           <a href="http://webkrauts.de/artikel/2018/modale-und-barrierefreie-dialogfenster">Abgedunkelte Inhalte muss keiner lesen</a>,
           <i class="website">Webkrauts</i>, <abbr>Jan.</abbr> 2018.
