Add: Chiwandire & Vincent: Funding and inclusion in higher education institutions for students with disabilities

--- a/social-legal.html
+++ b/social-legal.html
@@ -360,6 +360,14 @@
         <i class="blog">Knowbility</i>, 08.01.2020.
       </li>
     </ul>
+
+    <h2>Other Links</h2>
+    <ul>
+      <li>Chiwandire, Desire; Vincent, Louise:
+        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6424000/#CIT0055">Funding and inclusion in higher education institutions for students with disabilities</a>,
+        <i class="journal">African Journal of Disability</i>, 2019.
+      </li>
+    </ul>
   </main>
 
   <footer>
