Add: Steenhout: An Introduction to LMS Accessibility

--- a/elearning.html
+++ b/elearning.html
@@ -161,6 +161,15 @@
 
     <h2 id="lmsaccessibility">Accessibility of Online Learning Platforms and Learning Management Systems</h2>
     <ul>
+      <li>Steenhout, Nicolas:
+        <a href="https://vimeo.com/472161667">An Introduction to <abbr>LMS</abbr> Accessibility</a>
+        (<i class="vimeochannel">Tagoras</i> on Vimeo, 17 minutes, 26.10.2020; see also the
+        <a href="https://live.reviewmylms.com/download/7181/">transcript of An Introduction to <abbr>LMS</abbr> Accessibility</a>).
+        <br />This is an introductory video that, among other things, demonstrates what sort of barriers a blind user may run into,
+        briefly introduces American and Canadian legislation that is relevant to accessibility and
+        gives a few tips for finding out whether an <abbr>LMS</abbr> is reasonably accessible (for example, is there a <abbr>VPAT</abbr> for it.)
+        <!--Referrer: Nicolas Steenhout / @vavroom, 26.10.2020: https://twitter.com/vavroom/status/1320751120902352896 -->
+      </li>
       <li>Calle-Jiménez, Tania; Sanchez-Gordon, Sandra; Luján-Mora, Sergio:
         <a href="http://desarrolloweb.dlsi.ua.es/moocs/web-accessibility-evaluation-mooc-geographical-information-systems">Web Accessibility Evaluation of Massive Open Online Courses on Geographical Information Systems</a>,
         Proceedings of <abbr>IEEE</abbr> Global Engineering Education Conference (EDUCON 2014), p. 680-686, Istanbul (Turkey), April 3-5 2014. <abbr>ISBN</abbr>: 978-1-4799-3190-3.
