Add: LMS Selection Resources

--- a/elearning.html
+++ b/elearning.html
@@ -170,6 +170,15 @@
         gives a few tips for finding out whether an <abbr>LMS</abbr> is reasonably accessible (for example, is there a <abbr>VPAT</abbr> for it.)
         <!--Referrer: Nicolas Steenhout / @vavroom, 26.10.2020: https://twitter.com/vavroom/status/1320751120902352896 -->
       </li>
+      <li>
+        <a href="https://live.reviewmylms.com/resources/"><abbr>LMS</abbr> Selection Resources</a>,
+        <i class="website">Live Review</i> (no date; probably 2020).
+      </li>
+      <li>Brito, Elisabeth; Paiva Dias, Gonçalo:
+        <a href="https://ieeexplore.ieee.org/abstract/document/9141046"><abbr>LMS</abbr> accessibility for students with disabilities: The experts’ opinions</a>,
+        2020 15th Iberian Conference on Information Systems and Technologies (<abbr>CISTI</abbr>), Sevilla, Spain, 24-27 June 2020;
+        <i class="website"><abbr>IEEE</abbr> Explore</i>, 15 July 2020.
+      </li>
       <li>Calle-Jiménez, Tania; Sanchez-Gordon, Sandra; Luján-Mora, Sergio:
         <a href="http://desarrolloweb.dlsi.ua.es/moocs/web-accessibility-evaluation-mooc-geographical-information-systems">Web Accessibility Evaluation of Massive Open Online Courses on Geographical Information Systems</a>,
         Proceedings of <abbr>IEEE</abbr> Global Engineering Education Conference (EDUCON 2014), p. 680-686, Istanbul (Turkey), April 3-5 2014. <abbr>ISBN</abbr>: 978-1-4799-3190-3.
