--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -327,7 +327,10 @@
         <a href="http://www.w3.org/TR/UAAG20/">User Agent Accessibility Guidelines (<abbr>UAAG</abbr>) 2.0</a>:
         guidelines for web browsers and similar applications (including media 
         players and browser extensions) that render web content.
-      </li>                     
+      </li>
+      <li><abbr>W3C</abbr>:
+        <a href="https://www.w3.org/TR/wai-aria-1.1/">Accessible Rich Internet Applications (<abbr>WAI-ARIA</abbr>) 1.1 &mdash; <abbr>W3C</abbr> Recommendation 14 December 2017</a>.
+      </li>
       <li><abbr>W3C</abbr>:
         <a href="http://www.w3.org/TR/wai-aria/">Accessible Rich Internet Applications (<abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr>) 1.0</a>:
         specification of an ontology of roles, states and properties that can be
