Add: modalzmodalzmodalz.com; Bailey: Focus management and inert

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1192,6 +1192,9 @@
           <a href="http://www.allanbeattie.co.uk/blog/inclusive-modals/">Making an Inclusive Progressively-Enhanced Feedback Form in a Modal Dialog</a>,
           <i class="blog">Allan Beattie's blog</i>, 10.12.2017.
         </li>
+        <li>
+          <a href="https://modalzmodalzmodalz.com/">MODALZ MODALZ MODALZ</a>.
+        </li>
       </ul>
 
       <h3>Other User Interface Components or Widgets</h3>
@@ -2039,6 +2042,10 @@
           <br />This is an introduction to the
           <a href="https://drafts.csswg.org/selectors-4/#the-focus-visible-pseudo"><code>:focus-visible</code> pseudo-class introduced in <abbr>CSS</abbr> Selectors Level 4</a>.
           <!--@@recheck CSSWG link once CSS Selectors Level 4 has reached W3C Rec status.-->
+        </li>
+        <li>Bailey, Eric:
+          <a href="https://css-tricks.com/focus-management-and-inert/">Focus management and inert</a>,
+          <i class="website"><abbr>CSS</abbr>-Tricks</i>, 19.10.2020.
         </li>
       </ul>
 
