Add: h2: Studying with a Disability

--- a/social-legal.html
+++ b/social-legal.html
@@ -361,6 +361,41 @@
       </li>
     </ul>
 
+    <h2>Studying with a Disability</h2>
+    <p>The resources listed below focus mainly on higher education.</p>
+    <ul>
+      <li>Elwes, Sophie:
+        <a href="http://myplusstudentsclub.com/blog/6-tips-for-studying-with-a-disability/">6 Tips For Studying With A Disability</a>,
+        <i class="blog">MyPlus Students' Club</i>, 08.01.2019.
+      </li>
+      <li>
+        <a href="https://help.open.ac.uk/browse/disability">Disability support</a>,
+        <i class="website">The Open University</i> (no date).
+      </li>
+      <li>
+        <a href="http://www.dass.manchester.ac.uk/">Disability Advisory and Support Service and University of Manchester Assessment Centre</a>,
+        <i class="website">The University of Manchester</i> (no date).
+      </li>
+      <li>
+        <a href="https://www.tilburguniversity.edu/students/studying/study-progress/circumstances/disabled">Studying with a disability</a>,
+        <i class="website">Tilburg University</i> (no date).
+      </li>
+      <li>
+        <a href=""></a>
+      </li>
+      <!--Studying with a disability
+        * https://best-umfrage.de/
+        * Studierende mit studienerschwerenden Beeinträchtigungen: https://best-umfrage.de/best1-zentrale-ergebnisse/
+        * Beauftragte für Studierende mit Behinderungen und chronischen Krankheiten: https://www.studentenwerke.de/de/content/beauftragte-f%C3%BCr-studierende-mit-behinderungen-und-chronischen-krankheiten
+        * Als Student mit Behinderung in Deutschland Studieren: https://www.studieren-in-deutschland.org/als-student-mit-behinderung-in-deutschland-studieren/
+        * Studieren in Deutschland mit Behinderung: https://www.myhandicap.de/job-ausbildung-behinderung/studium/studieren-mit-behinderung/
+        * Die Skripte sind das Wichtigste. 03.12.2012: https://www.hdm-stuttgart.de/view_news?ident=news20121121152403
+        * Nachteilsausgleich im Studium und bei Prüfungen: https://www.hochschule-trier.de/studium/informationen-service/studieren-mit-behinderung-und-chronischer-krankheit/nachteilsausgleich-im-studium-und-bei-pruefungen/
+        * E-Klausur: https://www.e-teaching.org/lehrszenarien/pruefung/pruefungsform/e-pruefung/
+      -->
+      <!--Sheffield Hallam University: The Skills Centre: Resources: https://blogs.shu.ac.uk/skillscentre/resources/ -->
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>Chiwandire, Desire; Vincent, Louise:
