Add: h2: Auditing and Reporting

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2097,6 +2097,21 @@
     </section>
 
     <section>
+      <h2>Auditing and Reporting</h2>
+      <ul>
+        <li>
+          <a href="https://www.w3.org/WAI/test-evaluate/preliminary/">Easy Checks – A First Review of Web Accessibility</a>,
+          <i class="website">Web Accessibility Initiative</i>.
+        </li>
+        <li>Gifford, Mike:
+          <a href="https://medium.com/openconcept-stories/writing-impactful-accessibility-reports-d6cdd84356fd">Writing Impactful Accessibility Reports</a>,
+          <i class="website">OpenConcept Stories</i> on Medium, 16.03.2020 (eight-minute read).
+          <!--@@read and describe!-->
+        </li>
+      </ul>
+    </section>
+
+    <section>
       <h2>Unsorted Web Accessibility Links</h2>
       <ul>
         <li><i class="website">A List Apart</i>:
@@ -2105,12 +2120,6 @@
         <li lang="de">
           <a href="http://www.hellbusch.de/meine-barrierefreiheit-deine-barrierefreiheit/">Meine Barrierefreiheit, Deine Barrierefreiheit: Studie zur Wirkung von barrierefreien Webseiten auf ihre Nutzer</a>,
           24.06.2014.
-        </li>
-        <!--@@auditing and reporting:-->
-        <li>Gifford, Mike:
-          <a href="https://medium.com/openconcept-stories/writing-impactful-accessibility-reports-d6cdd84356fd">Writing Impactful Accessibility Reports</a>,
-          <i class="website">OpenConcept Stories</i> on Medium, 16.03.2020 (eight-minute read).
-          <!--@@read and describe!-->
         </li>
         <li>Head, Val:
           <a href="https://alistapart.com/article/designing-safer-web-animation-for-motion-sensitivity">Designing Safer Web Animation For Motion Sensitivity</a>,
@@ -2273,7 +2282,7 @@
 
     <!--
     <section>
-      <h2>
+      <h2></h2>
         <ul>
           <li>
             <a href=""></a>,
