--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1728,7 +1728,7 @@
         -->
         <li>Bailey, Eric:
           <a href="https://css-tricks.com/introduction-reduced-motion-media-query/">An Introduction to the Reduced Motion Media Query</a>,
-          <i class="website"><abbr>CSS</abbr>-Tricks, 10.02.2017, updated 17.06.2017.
+          <i class="website"><abbr>CSS</abbr>-Tricks</i>, 10.02.2017, updated 17.06.2017.
           <br />See also the
           <a href="https://caniuse.com/#search=prefers-reduced-motion">support tables for <code>prefers-reduced-motion</code></a>
           on CanIUse.com and
